# cbr-tools-extra

./: .gitignore  .gitmodules  .vimspector.json  README.md  cbrtools  cbrtools.py  default.nix  flake.nix  getdate.bat  package.nix  pyproject.toml  pyrightconfig.json  requirements.base.txt  requirements.nix  requirements.nix.txt  requirements.txt  result  setup.py  shell.nix
.github/workflows/: pre-release.yml
cbr/extra/: main.py
cbr/extra/energy/: mutations.py  postprocessing.py
cbrextra/: main.py  testutils.py
cbrextra-hs/: CHANGELOG.md  cbrextra-hs.cabal
cbrextra-hs/app/Bio/: Cbr.hs
cbrextra-hs/app/Bio/Cbr/: IO.hs  Msa.hs
cbrextra-hs/app/Bio/Cbr/Msa/: Algorithms.hs
cbrextra-hs/wrapper/: cbrextra.c
cbrextra/cascades/: data.py  find_cascades.py  find_organisms.py  main.py  models.py  query_organisms.py  store.py  support.py
cbrextra/cavities/: algorithms.py  data.py  main.py
cbrextra/coevolution/: algorithms.py  data.py  main.py
cbrextra/core/: module.py
cbrextra/core/interactive/: __init__.py  data.py  handler.py  shared.py
cbrextra/energy/: main.py  mutations.py  postprocessing.py  sequences.py
cbrextra/kinetics/: compute.py  data.py  main.py
cbrextra/kinetics/models/: __init__.py  factory.py  partial_inhibition.py
cbrextra/ncbi/openapi/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
cbrextra/ncbi/openapi/api/: __init__.py  bio_sample_api.py  gene_api.py  genome_api.py  organelle_api.py  prokaryote_api.py  taxonomy_api.py  version_api.py  virus_api.py
cbrextra/ncbi/openapi/models/: __init__.py  protobuf_any.py  rpc_status.py  v2_annotation_for_assembly_type.py  v2_annotation_for_organelle_type.py  v2_assembly_accessions.py  v2_assembly_check_m_histogram_reply.py  v2_assembly_check_m_histogram_reply_histogram_interval.py  v2_assembly_check_m_histogram_request.py  v2_assembly_dataset_availability.py  v2_assembly_dataset_descriptors_filter.py  v2_assembly_dataset_descriptors_filter_assembly_source.py  v2_assembly_dataset_descriptors_filter_assembly_version.py  v2_assembly_dataset_descriptors_filter_metagenome_derived_filter.py  v2_assembly_dataset_descriptors_filter_type_material_category.py  v2_assembly_dataset_reports_request.py  v2_assembly_dataset_reports_request_content_type.py  v2_assembly_dataset_request.py  v2_assembly_dataset_request_resolution.py  v2_assembly_links_reply.py  v2_assembly_links_reply_assembly_link.py  v2_assembly_links_reply_assembly_link_type.py  v2_assembly_links_request.py  v2_assembly_revision_history.py  v2_assembly_revision_history_request.py  v2_assembly_sequence_reports_request.py  v2_bio_sample_dataset_reports_request.py  v2_dataset_request.py  v2_download_summary.py  v2_download_summary_available_files.py  v2_download_summary_dehydrated.py  v2_download_summary_file_summary.py  v2_download_summary_hydrated.py  v2_fasta.py  v2_gene_chromosome_summary_reply.py  v2_gene_chromosome_summary_reply_gene_chromosome_summary.py  v2_gene_chromosome_summary_request.py  v2_gene_counts_by_taxon_reply.py  v2_gene_counts_by_taxon_reply_gene_type_and_count.py  v2_gene_counts_by_taxon_request.py  (+194 more)
cbrextra/primers/: data.py  design.py  main.py  melting_temp.py  models.py  query.py  store.py
cbrextra/primers/demo/: design_primers_01.json
cbrextra/sequences/: blast.py  clonemanager.py  data.py  excelloader.py  main.py  manager.py  models.py  procedures.py  save.py  search.py  sequence.py
cbrextrars/: Cargo.toml
cbrextrars/src/: lib.rs
cbrextrars/src/histon/: data.rs  extend.rs  foundations.rs  mod.rs
cbrextrars/src/histon.v0/: data.rs
cbrextrars/src/protdeflator/: screen.rs
metal/: Cargo.toml  pyproject.toml
metal/src/: lib.rs
metal/src/algorithms/: cavities.rs  mod.rs  spatial.rs
metal/src/core/: data.rs  error.rs  mod.rs  pdb.rs  pdb_context.rs
metal/src/py_api/: error.rs  mod.rs  pdb_context.rs
nix-dependencies/: default.nix  result  result-2
nix-dependencies/open3d/: .gitignore  open3d-common.nix  open3d-cpu.nix
scripts/: bundle.sh
tests/: support.py  test_PdbContext.py  test_cavities.py  test_coevolution.py  test_sequences.py
tests/resources/: __init__.py
tests/resources/cavities/: 2gvi.atoms.json  5b08.chainA.atoms.json
tests/resources/coevolution/: Test1.aln.fasta  Test2.aln.fasta
typings/igraph/: __init__.pyi  seq.pyi
typings/open3d/: geometry.pyi
