[tool.poetry]
name = "cbr-tools-extra"
version = "0.1.0"
description = "Support exectuable for CBR Tools."
authors = ["netogallo <connect@netowork.me>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
#docopt = "^0.6.2"
#igraph = "^0.11.5"
#openpyxl = "^3.1.4"
#pandas = "^2.2.2"
#primer3-py = "^2.0.3"
#pydantic = "^2.7.4"
#requests = "^2.32.3"
#sqlalchemy = "^2.0.31"
#biopython = {git = "https://github.com/netogallo/biopython.git", rev = "a95ae4130580d09107882ee6bdbc159d4803b122"}
open3d-cpu = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my_package_cli = 'cbrextra.main:main'
